<resources>
    <string name="app_name">Coffee Shop App</string>
    <string name="sign_in_string">Sign In</string>
    <string name="sign_in_enter_username">Username</string>
    <string name="sign_in_username">Username…</string>
    <string name="sign_in_enter_password">Password</string>
    <string name="sign_in_password">Password...</string>
    <string name="sign_in_button">Sign In</string>
    <string name="me_page">Me</string>
    <string name="home_page">Home page</string>
    <string name="cart_page">Cart Page</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_home">Home</string>
    <string name="menu_me">Me</string>
    <string name="item_available">Available</string>
    <string name="item_in_stock">In Stock</string>
    <string name="item_rub">RUB</string>
    <string name="add_to_cart">Add</string>
    <string name="item_weight">g</string>
    <string name="settings">Settings</string>
    <string name="remove">remove</string>
    <string name="pay">Pay</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
</resources>